--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Potfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon ."
   },
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Vinicius-Holtman/Potfolio#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
